--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.24",
-    "three": "^0.148.0"
+    "three": "^0.148.0",
+    "web-vitals": "^3.1.1"
   },
   "devDependencies": {
     "prettier": "^2.8.3",
